Ajout de la structure B-Tree

--- a/Projet1/Projet1.vcxproj
+++ b/Projet1/Projet1.vcxproj
@@ -110,6 +110,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BTree.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BTree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
