Fix des insertions + version 1.1 main

--- a/Projet1/Projet1.vcxproj.filters
+++ b/Projet1/Projet1.vcxproj.filters
@@ -45,5 +45,8 @@
     <Text Include="dictionnaire.txt">
       <Filter>Fichiers sources</Filter>
     </Text>
+    <Text Include="dictionnaire2.txt">
+      <Filter>Fichiers sources</Filter>
+    </Text>
   </ItemGroup>
 </Project>
