--- a/Projet1/Projet1.vcxproj
+++ b/Projet1/Projet1.vcxproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="dictionnaire.txt" />
+    <Text Include="dictionnaire2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
